--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -69,4 +69,4 @@ Now you can simply create smart accounts like this.
 This smart account uses the following default values:
 - ECDSA Validation Module
 - default entry point address for the chainId
-- paymaster mode is set to SPONSORED
+- paymaster instance is created by the SDK
