move description to Main page and other changes

--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -49,7 +49,7 @@ Simply pass a bundler url as a parameter for the smart account.
 
 :::info
 
-[Click here](/dashboard/keys) to learn more about our dashboard and how to get your own bundler url.
+[Click here](/dashboard) to learn more about our dashboard and how to get your own bundler url.
 
 :::
 
