--- a/docs/Paymaster/index.mdx
+++ b/docs/Paymaster/index.mdx
@@ -1,8 +1,8 @@
 ---
-sidebar_position: 1
+slug: /paymaster
+sidebar_position: 4
+title: Paymaster
 ---
-
-# Description
 
 Biconomy offers a Paymaster service designed with one of the best developer experiences in mind. Simply use one URL and switch modes between our sponsorship paymaster and our Token Paymaster.
 
@@ -16,6 +16,14 @@ If the mode you choose in the request to the Paymaster URL is the sponsored mode
 
 ![Erc20](../images/overview/erc20gas.png)
 
-Switching the mode of your Paymster to ERC20 allows you to unlock an experience where users can pay gas in any of our supported ERC20 tokens on different networks. Check out the latest supported tokens [here](/paymaster/supportedNetworks).
+Switching the mode of your Paymster to ERC20 allows you to unlock an experience where users can pay for gas in any of our supported ERC20 tokens on different networks. Check out the latest supported tokens [here](/paymaster/supportedNetworks).
 
 Learn how to utilize either of these Paymasters by checking out our How To Guide on [Executing transactions](/category/executing-transactions)
+
+In the following sections, we will more systematically introduce the following concepts:
+
+```mdx-code-block
+import DocCardList from '@theme/DocCardList';
+
+<DocCardList />
+```
