--- a/docs/Account/index.mdx
+++ b/docs/Account/index.mdx
@@ -15,7 +15,7 @@ They replace traditional Externally Owned Accounts(Wallets).
 The Biconomy Smart Accounts are an ERC 4337-compliant solution that works with any Paymaster and Bundler service.
 
 These Smart Accounts are signer agnostic, which allows you to use any authorization package of your choice as long as you can pass a signer to our SDK upon the creation of a Smart Account. 
-Check out the different ways you can create a Biconomy Smart Account [here](/category/signers).
+Check out the different ways you can create a Biconomy Smart Account [here](/account/signers).
 
 Smart Accounts are further enhanced by validation modules that allow you to execute arbitrary logic before validating a `userOp`. 
 This allows you, as a developer, to build modules that allow for session keys, multi-chain validation modules, pass keys, and more. Learn more about Modules [here](/modules).
