Add all supported chains

--- a/docs/Bundler/supportedNetworks.mdx
+++ b/docs/Bundler/supportedNetworks.mdx
@@ -25,6 +25,9 @@ This is  the list of networks supported by our Bundlers.
 |opBNB Mainnet | ✅ | ✅ |    
 |Manta Mainnet | ✅ | ✅ |    
 |Core Mainnet | ✅ | ✅ |    
+|Combo Mainnet | ✅ | ✅ |  
+|Mantle | ✅ | ✅ |  
+|capX | ✅ |  | 
 
 For test networks, replace the `chainId` in the `bundlerUrl` by your own `chainId`. The bundler URL can be obtained from the dashboard.
 
