fix paymaster methods

--- a/docs/Paymaster/api/index.mdx
+++ b/docs/Paymaster/api/index.mdx
@@ -13,7 +13,7 @@ All requests must follow the [JSON RPC](https://www.jsonrpc.org/specification) s
 
 :::info
 This documentation is for using our Paymaster APIs directly. 
-If you are building with the Biconomy SDK you can follow the instructions on this [page](/Paymaster/paymastermethods).
+If you are building with the Biconomy SDK you can follow the instructions on this [page](/Paymaster/methods).
 
 You can test these endpoints on our [Paymaster Explorer](/Paymaster/api/explorer)
 :::
