--- a/docs/Paymaster/index.mdx
+++ b/docs/Paymaster/index.mdx
@@ -7,7 +7,7 @@ title: Paymaster
 Paymasters are smart contracts that help facilitate transaction sponsorship, allowing third-party-designed mechanisms to pay for transactions.
 With Biconomy's Paymaster service, you can manage gas fees for your users effortlessly.
 
-**Revenue sharing**: on a case by case basis depending on volumes, we do offer a split of the Paymaster fee revenue with selected Apps. 
+**Revenue sharing**: on a case-by-case basis depending on volumes, we do offer a split of the Paymaster fee revenue with selected Apps. 
 <button class="my-button" > <a href="https://www.biconomy.io/book-a-demo" target="_blank" rel="noopener noreferrer">Get in touch</a> </button> to learn more.
 
 In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on the dashboard and obtain the paymasterURL. Biconomy paymaster supports two modes:
