refactor the chain names

--- a/docs/Bundler/supportedNetworks.mdx
+++ b/docs/Bundler/supportedNetworks.mdx
@@ -18,14 +18,14 @@ This is  the list of networks supported by our Bundlers.
 |Arbitrum Nova  | ✅ | ✅ |  
 |Optimism  | ✅ | ✅ |  
 |Avalanche  | ✅ | ✅ |  
-|Base Mainnet | ✅ | ✅ |    
-|Linea Mainnet | ✅ | ✅ |    
-|Chiliz Mainnet | ✅ | ✅ |    
-|Astar Mainnet | ✅ | ✅ |    
-|opBNB Mainnet | ✅ | ✅ |    
-|Manta Mainnet | ✅ | ✅ |    
-|Core Mainnet | ✅ | ✅ |    
-|Combo Mainnet | ✅ | ✅ |  
+|Base | ✅ | ✅ |    
+|Linea | ✅ | ✅ |    
+|Chiliz | ✅ | ✅ |    
+|Astar | ✅ | ✅ |    
+|opBNB | ✅ | ✅ |    
+|Manta | ✅ | ✅ |    
+|Core | ✅ | ✅ |    
+|Combo | ✅ | ✅ |  
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  | 
 
