--- a/docs/Paymaster/supportedNetworks.mdx
+++ b/docs/Paymaster/supportedNetworks.mdx
@@ -18,14 +18,14 @@ custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Paymaster/suppor
 |Arbitrum Nova  | ✅ | ✅ |  
 |Optimism  | ✅ | ✅ |  
 |Avalanche  | ✅ | ✅ | 
-|Base Mainnet | ✅ | ✅ |    
-|Linea Mainnet | ✅ | ✅ |    
-|Chiliz Mainnet | ✅ | ✅ |    
-|Astar Mainnet | ✅ | ✅ |    
-|opBNB Mainnet | ✅ | ✅ |  
-|Manta Mainnet | ✅ | ✅ |    
-|Core Mainnet | ✅ | ✅ |    
-|Combo Mainnet | ✅ | ✅ |  
+|Base | ✅ | ✅ |    
+|Linea | ✅ | ✅ |    
+|Chiliz | ✅ | ✅ |    
+|Astar | ✅ | ✅ |    
+|opBNB | ✅ | ✅ |  
+|Manta | ✅ | ✅ |    
+|Core | ✅ | ✅ |    
+|Combo | ✅ | ✅ |  
 |Mantle | ✅ | ✅ |  
 |capX | ✅ |  |  
 
