Add bundler url

--- a/docs/dashboard/index.mdx
+++ b/docs/dashboard/index.mdx
@@ -20,7 +20,7 @@ Paymaster keys can be found on the Overview page of the paymasters. You can copy
 
 ![paymaster keys](../images/keys/paymaster_keys.png)
 
-## Bundler Keys
+## Bundler URL
 
 Our Bundler as a service is coming soon but for now you can use the following URL for your bundler package:
 
