--- a/docs/Bundler/index.mdx
+++ b/docs/Bundler/index.mdx
@@ -8,7 +8,7 @@ The Bundler is a service that tracks userOps that exist in an alternative mem po
 This is the final piece of the flow where after constructing your `userOp` and then potentially signing it with data from a paymaster, you send the `userOp` on-chain to be handled and executed as a transaction on the EVM. 
 You can start using our Bundlers right now in your dApps; each of our [tutorials](/category/tutorials) will walk you through how to use them in different scenarios.
 
-In short, the Bundler is responsible for the following:
+you can get the bundler url from [here](/dashboard#bundler-url). In short, the Bundler is responsible for the following:
 
 - Aggregating userOps in an alternative `mempool` to normal Ethereum Transactions
 - Submitting to the Network: Bundlers EOA will send the `userOp` to the Entry Point Contract as a transaction
