--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -106,7 +106,7 @@ Specify PRIVATE_KEY, BUNDLER_URL and RPC_URL (for ethers) to create a smart acco
 
 </TabItem>
 
-<TabItem value="py" label="Alchemy ">
+<TabItem value="py2" label="Alchemy ">
 
 ```typescript
   import { ethers } from "ethers";	
