--- a/docs/Modules/ecdsa.mdx
+++ b/docs/Modules/ecdsa.mdx
@@ -132,81 +132,7 @@ The `EcdsaOwnershipRegistryModule` interacts with Smart Accounts primarily throu
 
 Integrate the ECDSA Validation Module into Biconomy Smart Accounts using the SDK.
 
-### Setup and Installation 🛠️
+### Initializing ECDSA Module 🌟
 
-<Tabs>
-<TabItem value="js" label="npm">
+There is no need to do anything in order to use ECDSAOwnershipValidationModule, this module is set by default on every smart account.
 
-```bash
-
-npm install @biconomy/modules ethers
-
-```
-
-</TabItem>
-<TabItem value="py" label="yarn">
-
-```bash
-
-yarn add @biconomy/modules ethers
-
-```
-
-</TabItem>
-<TabItem value="java" label="pnpm">
-
-```bash
-
-pnpm add @biconomy/modules ethers
-
-```
-
-</TabItem>
-</Tabs>
-
-### Creating a Signer 🗝️
-
-```javascript
-import { ethers } from "ethers";
-
-const provider = new ethers.providers.JsonRpcProvider("[RPC_Endpoint]");
-const signer = new ethers.Wallet("[Private_Key]", provider);
-```
-
-### Importing and Initializing ECDSA Module 🌟
-
-```javascript
-import {
-  ECDSAOwnershipValidationModule,
-  DEFAULT_ECDSA_OWNERSHIP_MODULE,
-} from "@biconomy/modules";
-
-const ecdsaModule = await ECDSAOwnershipValidationModule.create({
-  signer: signer,
-  moduleAddress: DEFAULT_ECDSA_OWNERSHIP_MODULE,
-});
-```
-
-### Creating a Smart Account 🚀
-
-```javascript
-import { BiconomySmartAccountV2 } from "@biconomy/account";
-
-const smartAccount = await BiconomySmartAccountV2.create({
-  chainId: ChainId.BASE_GOERLI_TESTNET,
-  paymaster: //basePaymaster,
-  bundler: //baseBundler,
-  rpcUrl: // Base Goerli Rpc
-  defaultValidationModule: ecdsaModule,
-  activeValidationModule: ecdsaModule, // If not provided, it will be same as provided defaultValidationModule
-  // Additional configurations
-});
-```
-
-:::info
-The Smart Account's address is counterfactually generated based on the signer's public key, which is the owner's address used in the ECDSA Module. This feature allows for the pre-calculation of the account address before deployment.
-:::
-
-:::warning
-To deploy the same Smart Account (with the same address) on different chains, it's crucial to use the same module address, the same initialization data (here, the owner's EOA address) for the ECDSA Module here and the index. This ensures consistency in the account's address across various blockchains.
-:::
