--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -7,7 +7,7 @@ custom_edit_url: https://github.com/bcnmy/docs/blob/master/docs/Account/integrat
 
 Smart Accounts are created deterministically using the [CREATE2](https://docs.openzeppelin.com/cli/2.7/deploying-with-create2) opcode, meaning the smart account address can be identified even before it is deployed. It will also maintain the same address across different chains. 
 
-To integrate `Biconomy Smart Account`, you'll need the [bundler url](/dashboard#bundler-url). If you also want to use the paymaster, you'll need [Paymaster api key](/paymaster).
+To integrate a `Biconomy Smart Account`, you'll need the [bundler url](/dashboard#bundler-url). If you also want to use the paymaster, you'll need [Paymaster api key](/paymaster).
 
 ## Installation
 
@@ -48,7 +48,7 @@ pnpm add @biconomy/account
 
 ## Integration
 
-Specify PRIVATE_KEY, BUNDLER_URL and RPC_URL (for ethers) to create a smart account. 
+Specify `PRIVATE_KEY`, `BUNDLER_URL`, and `RPC_URL` (for ethers) to create a smart account. 
 
 <Tabs>
 <TabItem value="js" label="Viem">
@@ -134,11 +134,12 @@ Specify PRIVATE_KEY, BUNDLER_URL and RPC_URL (for ethers) to create a smart acco
 
 </Tabs>
 
-In this doc, following values are used by default:
-- ECDSA Validation Module, other validation [modules](/modules) can be enabled based on the specific use case.
+In this doc, the following values are used by default:
+
+- ECDSA Validation Module. Other validation [modules](/modules) can be enabled based on the specific use case.
 - The default entry point [address](contracts.md) is used for the chainId.
 - An index with a value 0, but you can also specify a custom index value in the configuration to generate multiple smart accounts with the same signer.
 
 CREATE2 allows us to enable flows where users could even send funds to an undeployed wallet, which could then be used to pay for the gas for deployment.
-Smart account will be deployed with the first UserOp execution. 
+A smart account will be deployed with the first UserOp execution. 
 
