fixed broken links

--- a/docs/Modules/sessionvalidationmodule.mdx
+++ b/docs/Modules/sessionvalidationmodule.mdx
@@ -50,4 +50,4 @@ const sessionModule = await SessionKeyManagerModule.create({
 });
 ```
 
-For full implementation see this [guide](/category/session-keys-tutorial/)
+For full implementation see this [guide](/tutorials/sessionkeys)
