--- a/versioned_docs/version-3.0/modules/sessionvalidationmodule.mdx
+++ b/versioned_docs/version-3.0/modules/sessionvalidationmodule.mdx
@@ -50,4 +50,4 @@ const sessionModule = await SessionKeyManagerModule.create({
 });
 ```
 
-For full implementation see this [guide](/category/session-keys-tutorial/)
+For full implementation see this [guide](/tutorials/sessionkeys)
