--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -79,4 +79,4 @@ If you wish to pass "strictMode" to your Paymaster you need to create the instac
   );
 ```
 
-You have now assigned the Paymaster to the smart account. See our [tutorials](/category/tutorials) for in depth integrations of the Smart Account and Paymaster.
+You have now assigned the Paymaster to the smart account. See our [tutorials](/tutorials) for in depth integrations of the Smart Account and Paymaster.
