--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -216,4 +216,4 @@ If you are facing any error, check out [troubleshooting](/troubleshooting/common
 
 🎉 **Congratulations on completing the quickstart!**
 
-To dive deeper, check out more [use cases](/account/transactions) and follow [this guide for gasless transactions](/account/transactions/gasless).
+To dive deeper, check out more [use cases](/tutorials) and follow [this guide for gasless transactions](/tutorials/sendGasless).
