--- a/versioned_docs/version-3.0/bundler/integration.mdx
+++ b/versioned_docs/version-3.0/bundler/integration.mdx
@@ -98,4 +98,4 @@ Or you can create your own instance of the Bundler if you wish to pass more para
   );
 ```
 
-Once initialized you will be able to pass this Bundler instance to the Smart Account configuration to use in conjunction with our Smart Accounts. See our [tutorials](/category/tutorials) for in depth integrations of the Smart Account and Bundler.
+Once initialized you will be able to pass this Bundler instance to the Smart Account configuration to use in conjunction with our Smart Accounts. See our [tutorials](/tutorials) for in depth integrations of the Smart Account and Bundler.
