--- a/versioned_docs/version-3.0/paymaster/index.mdx
+++ b/versioned_docs/version-3.0/paymaster/index.mdx
@@ -24,7 +24,7 @@ In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on 
 
 `ERC20` mode allows you to pay for the gas fees of your users in exchange for ERC-20 tokens. Check out the latest [supported ERC-20 tokens](/paymaster/supportedNetworks).
 
-Learn how to utilize either of these Paymasters by checking out our How To Guide on [Executing transactions](/account/transactions)
+Learn how to utilize either of these Paymasters by checking out our How To Guide on [Executing transactions](/tutorials)
 
 In the following sections, we will more systematically introduce the following concepts:
 
