--- a/versioned_docs/version-3.0/paymaster/integration.mdx
+++ b/versioned_docs/version-3.0/paymaster/integration.mdx
@@ -80,4 +80,4 @@ If you wish to pass "strictMode" to your Paymaster you need to create the instac
   );
 ```
 
-You have now assigned the Paymaster to the smart account. See our [tutorials](/category/tutorials) for in depth integrations of the Smart Account and Paymaster.
+You have now assigned the Paymaster to the smart account. See our [tutorials](/tutorials) for in depth integrations of the Smart Account and Paymaster.
