--- a/docs/Modules/multichain.mdx
+++ b/docs/Modules/multichain.mdx
@@ -159,7 +159,7 @@ Check [Paymaster integration](/Paymaster/integration) and [Bundler integration](
 
 Here is how you can set up Smart Account instances accross multiple chains:
 ```ts
-import { createSmartAccountClient } from "@biconomy/account";
+import { createSmartAccountClient } from "@biconomy-devx/account";
 
 let baseAccount = await createSmartAccountClient({
     biconomyPaymasterApiKey: "paymaster api key",
