--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -74,7 +74,7 @@ Copy the following code in `src/index.ts` and replace the `PRIVATE_KEY`.
 import { Hex, createWalletClient, encodeFunctionData, http, parseAbi, zeroAddress} from "viem";
 import { privateKeyToAccount } from "viem/accounts";
 import { polygonMumbai } from "viem/chains";
-import { createSmartAccountClient} from "@biconomy/account";
+import { createSmartAccountClient} from "@biconomy-devx/account";
 
 export const createAccountAndMintNft = async () => {
   // ----- 1. Generate EOA from private key
@@ -166,7 +166,7 @@ Well done! The entire Biconomy crew is sending you a big round of applause! 👏
 import { Hex, createWalletClient, encodeFunctionData, http, parseAbi, zeroAddress} from "viem";
 import { privateKeyToAccount } from "viem/accounts";
 import { polygonMumbai } from "viem/chains";
-import { createSmartAccountClient} from "@biconomy/account";
+import { createSmartAccountClient} from "@biconomy-devx/account";
 
 export const createAccountAndMintNft = async () => {
   // ----- 1. Generate EOA from private key
