--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -16,7 +16,7 @@ Please note that this tutorial assumes you have Node.js installed and have worki
 We will clone a preconfigured Node.js project to get started. 
 
 ```bash
-git clone https://github.com/bcnmy/quickstart.git
+git clone -b devx https://github.com/bcnmy/quickstart.git
 ```
 
 Install all dependencies using `yarn`, `npm`, or your package manager of choice.
