--- a/docs/Modules/sessionvalidationmodule.mdx
+++ b/docs/Modules/sessionvalidationmodule.mdx
@@ -16,7 +16,7 @@ import TabItem from "@theme/TabItem";
 
 ```bash
 
-npm install @biconomy/modules
+npm install @biconomy-devx/modules
 
 ```
 
@@ -25,7 +25,7 @@ npm install @biconomy/modules
 
 ```bash
 
-yarn add @biconomy/modules
+yarn add @biconomy-devx/modules
 
 ```
 
@@ -34,7 +34,7 @@ yarn add @biconomy/modules
 
 ```bash
 
-pnpm add @biconomy/modules
+pnpm add @biconomy-devx/modules
 
 ```
 
