--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -13,60 +13,45 @@ Please note that this tutorial assumes you have Node.js installed and have worki
 
 ## 1. Environment set up 🛠️
 
-We will clone a preconfigured Node.js project to get started. 
+We will create an npm project to get started. 
 
 ```bash
-git clone https://github.com/bcnmy/quickstart.git
+mkdir biconomy-sa
+cd biconomy-sa
+npm init -y
 ```
 
-Install all dependencies using `yarn`, `npm`, or your package manager of choice.
-
-import Tabs from "@theme/Tabs";
-import TabItem from "@theme/TabItem";
-
-<Tabs>
-<TabItem value="js" label="npm">
+Install biconomy sdk packages using npm.
 
 ```bash
-npm install
-
-npm run dev
+npm i @biconomy/account
+npm i --save-dev @types/node tslib
 ```
 
-</TabItem>
-<TabItem value="py" label="yarn">
-
-```bash
-yarn install
-
-yarn dev
+Create the following tsconfig.json (TypeScript config):
+```typescript
+{
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./lib",
+    "strict": true,
+    "esModuleInterop": true
+  },
+  "include": ["./**/*.ts"]
+}
 ```
-
-</TabItem>
-<TabItem value="java" label="pnpm">
-
-```bash
-pnpm install
-
-pnpm dev
-```
-
-</TabItem>
-</Tabs>
-
-
-You should see the printed statement `Hello World!` in your terminal.
-
-All packages you need for this guide are already installed. Check out the `package.json` file if you want to explore the dependencies.
 
 > The **Account package** will help you with creating **Smart Account** and an interface with them to send transactions.
 The same package can be used to also import the paymaster and bundler.
 
 ## 2. Create a smart account 🌟
 
+
 The **Externally Owned Account (EOA)** corresponding to the private key will serve as the owner of the Smart Account we create. You can get the private key from wallets like MetaMask, TrustWallet, Coinbase Wallet, etc. 🔑
 
-Copy the following code in `src/index.ts` and replace the `PRIVATE_KEY`.
+Create an index.ts file, copy the following code in it and replace the `PRIVATE_KEY`.
 
 > Be sure to never publicly expose your private key publicly. If possible, store it using an environment variable.
 
@@ -100,13 +85,26 @@ createAccountAndMintNft();
 
 ```
 
-After updating the code, you should see EOA and the smart account address in the console.
+Next, run the following command: 
+
+```bash
+npx ts-node index.ts
+```
+
+
+You should see EOA and the smart account address in the console.
+
+```bash
+EOA address: 0x7d4EcAc73A5574447E0F38b8451DC9B29D8Fd083
+SCW Address 0x4dF23B78543F5c2F9CBCDF09956288B3e97bb9a4
+```
+
 
 Smart accounts are designed with a pre-determined address known prior to deployment. Users transfer funds to this address and then the actual deployment transaction is internally batched with the first transaction that is done by that smart Account. Additionally, the paymaster can be used for this to sponsor this transaction.
 
 
 :::caution
-Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network head over to the [Polygon Faucet](https://faucet.polygon.technology/), paste in your smart account address, and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)! 💸
+Before continuing, now that we have our Smart Account address, we need to fund it with some test network tokens! Since we are using the Polygon Mumbai network, head over to the [Polygon Faucet](https://faucet.polygon.technology/), paste in your smart account address, and get some test tokens! If you skip this step, you might run into the [AA21 didn't pay prefund error](/troubleshooting/commonerrors.md)! 💸
 :::
 
 Once you have tokens available, follow the next steps.
@@ -119,16 +117,16 @@ Let's create your first transaction
 - `data`: For the mint function we will pass the `nftData` created using `encodeFunctionData`.
 - `value`: For the mint function this won't be needed. Depending on the transaction, you can pass the value.
 
-Add the following code in the script above in the same function.
+Add the following code in the script above at the bottom of the `createAccountAndMintNft` function.
 
 ```typescript
 try {
   const nftAddress = "0x1758f42Af7026fBbB559Dc60EcE0De3ef81f665e";
-    const parsedAbi = parseAbi(["function safeMint(address _to)"]);
-    const nftData = encodeFunctionData({
-      abi: parsedAbi,
-      functionName: "safeMint",
-      args: [scwAddress as Hex],
+  const parsedAbi = parseAbi(["function safeMint(address _to)"]);
+  const nftData = encodeFunctionData({
+    abi: parsedAbi,
+    functionName: "safeMint",
+    args: [scwAddress as Hex],
   });
 
   // ------ 4. Send transaction
@@ -149,13 +147,15 @@ try {
 
 1. We create a transaction object.
 2. We send the `transaction` to our bundler.
-3. We save the response in a variable called `transactionResponse`.
+3. We store the response in a variable called `transactionResponse`.
 4. We retrieve the transaction detail by calling `userOpResponse.waitForTxHash()`.
 
 _To wait for a specific number of network confirmations before getting the value, use `wait()` with a number argument.
 For instance, `transactionResponse.wait(5)` waits for 5 confirmations before returning the value._
 
 Check out the long transaction details available now in your console! You just created and executed your first userOps using the Biconomy SDK!
+
+You can also view the latest transaction events on the [Polygon Mumbai Testnet Explorer](https://mumbai.polygonscan.com/address/0x1758f42Af7026fBbB559Dc60EcE0De3ef81f665e#events).
 
 Well done! The entire Biconomy crew is sending you a big round of applause! 👏👏🏻👏🏼👏🏽👏🏾👏🏿
 
@@ -212,7 +212,7 @@ createAccountAndMintNft();
 ```
 
 </details>
-If you are facing any error, check out [troubleshooting](/troubleshooting/commonerrors) for common errors.
+If you run into any errors, check out [troubleshooting](/troubleshooting/commonerrors) for common errors.
 
 🎉 **Congratulations on completing the quickstart!**
 
